# hermes-feishu-plugin

./: .gitattributes  .gitignore  .npmignore  LICENSE  README.md  __init__.py  card_builder.py  card_errors.py  config.py  install.py  mode.py  package.json  patches.py  plugin.yaml  pyproject.toml  runtime_state.py  state.py  status_filter.py  streaming.py  tool_display.py
.github/workflows/: npm-publish.yml  release.yml
docs/: openclaw-alignment-checklist.md
src/hermes_feishu_plugin/: __init__.py  cardkit.py  flush_controller.py  i18n.py  install.py  patches.py  plugin.py  runtime_state.py  startup.py  streaming.py  tool_hooks.py
src/hermes_feishu_plugin/card/: __init__.py  builder.py  cardkit.py  heartbeat.py  live_state.py  models.py  streaming.py  streaming_support.py  tool_display.py  tool_panels.py
src/hermes_feishu_plugin/channel/: __init__.py  approval.py  burst_merge.py  common.py  patches.py  reactions.py  runtime_state.py  state.py  status_filter.py  status_patches.py  typing.py  ws_callbacks.py
src/hermes_feishu_plugin/core/: __init__.py  i18n.py  mode.py  sibling_bootstrap.py
src/hermes_feishu_plugin/tools/: __init__.py  hooks.py
tests/: conftest.py  test_approval.py  test_card_builder.py  test_cardkit.py  test_heartbeat.py  test_i18n.py  test_install_metadata.py  test_plugin_entrypoint.py  test_sibling_bootstrap.py  test_status_filter.py  test_status_patches.py  test_streaming.py  test_tool_display.py
