[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-feishu-plugin"
version = "0.6.0"
description = "Hermes Feishu plugin aligned with the official OpenClaw Lark/Feishu interaction model."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Hermes Feishu Plugin Contributors" }
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.entry-points."hermes_agent.plugins"]
hermes_feishu_plugin = "hermes_feishu_plugin.plugin"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
