[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-feishu-plugin"
version = "0.6.0"
description = "Hermes Feishu plugin aligned with the official OpenClaw Lark/Feishu interaction model."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Hermes Feishu Plugin Contributors" }
]
keywords = ["hermes", "feishu", "lark", "plugin", "openclaw"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Communications :: Chat",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/hellowind777/hermes-feishu-plugin"
Repository = "https://github.com/hellowind777/hermes-feishu-plugin"
Issues = "https://github.com/hellowind777/hermes-feishu-plugin/issues"

[project.optional-dependencies]
test = [
  "build>=1.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.23"
]

[project.entry-points."hermes_agent.plugins"]
hermes_feishu_plugin = "hermes_feishu_plugin.plugin"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--basetemp=.pytest_tmp"]
asyncio_mode = "auto"
